syntax = "proto3";

package fantlab;

option go_package = "app/pb";

enum Gender {
    UNKNOWN = 0;
    MALE = 1;
    FEMALE = 2;
}

message ErrorResponse {
    int32 error_code = 1;
    string message = 2;
}
